@@ -101,7 +101,7 @@ setup(name = "xappy",
       maintainer = "Richard Boulton",
       maintainer_email = "richard@lemurconsulting.com",
       url = "http://code.google.com/p/xappy",
-      download_url = "http://code.google.com/p/xappy", # FIXME
+      download_url = "http://xappy.googlecode.com/files/xappy-0.5.tar.gz",
       description = "Easy-to-use interface to the Xapian search engine",
       long_description = long_description,
       classifiers = [
