@@ -1,5 +1,5 @@
 from unittest import TestCase, main
-import tempfile, os, sys
+import os, shutil, sys, tempfile
 sys.path.insert(0, os.path.join(os.path.dirname(__file__), '../..'))
 
 from xappy.indexerconnection import *
@@ -54,8 +54,8 @@ docvalues = [
 
 class TestFacetHierarchy(TestCase):
     def setUp(self):
-        tempdir = tempfile.mkdtemp()
-        indexpath = os.path.join(tempdir, 'foo')
+        self.tempdir = tempfile.mkdtemp()
+        indexpath = os.path.join(self.tempdir, 'foo')
         self.iconn = IndexerConnection(indexpath)
         for name in facets:
             self.iconn.add_field_action(name, FieldActions.INDEX_EXACT)
@@ -100,6 +100,7 @@ class TestFacetHierarchy(TestCase):
     def tearDown(self):
         self.iconn.close()
         self.sconn.close()
+        shutil.rmtree(self.tempdir)
 
 if __name__ == '__main__':
     main()
