@@ -1,5 +1,5 @@
 from unittest import TestCase, main
-import tempfile, os, sys
+import os, shutil, sys, tempfile
 sys.path.insert(0, os.path.join(os.path.dirname(__file__), '../..'))
 
 from xappy.indexerconnection import *
@@ -8,8 +8,8 @@ from xappy.searchconnection import *
 
 class TestSpellCorrect(TestCase):
     def setUp(self):
-        tempdir = tempfile.mkdtemp()
-        self.indexpath = os.path.join(tempdir, 'foo')
+        self.tempdir = tempfile.mkdtemp()
+        self.indexpath = os.path.join(self.tempdir, 'foo')
         iconn = IndexerConnection(self.indexpath)
         iconn.add_field_action('name', FieldActions.INDEX_FREETEXT, spell=True,)
         for i in xrange(5):
@@ -28,6 +28,7 @@ class TestSpellCorrect(TestCase):
 
     def tearDown(self):
         self.sconn.close()
+        shutil.rmtree(self.tempdir)
 
 if __name__ == '__main__':
     main()
