@@ -1,3 +1,10 @@
+Wed May 07 14:13:04 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* setup.py,testsuite/runtests.py,testsuite/unittests/,xappy/,
+	  xappy/unittests/: Move doctests and unittests to separate
+	  directories under xappy, make unittests into a module, and
+	  incorporate running the unittests into the main testsuite runner.
+
 Tue May 06 15:39:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/,testsuite/runtests.py: Remove secore backwards
